--- a/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzetext-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/stable/2023-04-01/analyzetext-authoring.json
@@ -99,6 +99,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListProjects": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListProjects.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -492,6 +497,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulListDeployments": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListDeployments.json"
           }
         },
         "x-ms-pageable": {
@@ -973,6 +983,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListModels": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListModels.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1345,6 +1360,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListTrainingJobs": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListTrainingJobs.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1539,6 +1559,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulGetSupportedLanguages": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulGetSupportedLanguages.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1583,6 +1608,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulGetSupportedTrainingConfigVersions": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulGetSupportedTrainingConfigVersions.json"
           }
         },
         "x-ms-pageable": {
