--- a/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzetext-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2024-11-15-preview/analyzetext-authoring.json
@@ -99,6 +99,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListProjects": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListProjects.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -659,6 +664,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListDeployments": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListDeployments.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1209,6 +1219,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListExportedModels": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListExportedModels.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -1579,6 +1594,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulListModels": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListModels.json"
           }
         },
         "x-ms-pageable": {
@@ -2074,6 +2094,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListDeploymentResources": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListDeploymentResources.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2338,6 +2363,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListTrainingJobs": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListTrainingJobs.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2529,6 +2559,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulListAssignedResourceDeployments": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulListAssignedResourceDeployments.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2575,6 +2610,11 @@
             }
           }
         },
+        "x-ms-examples": {
+          "SuccessfulGetSupportedLanguages": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulGetSupportedLanguages.json"
+          }
+        },
         "x-ms-pageable": {
           "nextLinkName": "nextLink"
         }
@@ -2607,6 +2647,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulGetSupportedPrebuiltEntities": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulGetSupportedPrebuiltEntities.json"
           }
         },
         "x-ms-pageable": {
@@ -2653,6 +2698,11 @@
                 "description": "String error code indicating what went wrong."
               }
             }
+          }
+        },
+        "x-ms-examples": {
+          "SuccessfulGetSupportedTrainingConfigVersions": {
+            "$ref": "./examples/analyzetext-authoring/SuccessfulGetSupportedTrainingConfigVersions.json"
           }
         },
         "x-ms-pageable": {
