Remove deprecated @fixed decorators from typespec

--- a/specification/translation/data-plane/Azure.AI.TextTranslation/stable/v3.0/openapi.json
+++ b/specification/translation/data-plane/Azure.AI.TextTranslation/stable/v3.0/openapi.json
@@ -73,7 +73,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/InputTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -84,7 +85,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/BreakSentenceItem"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -153,7 +155,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/DictionaryExampleTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -164,7 +167,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/DictionaryExampleItem"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -233,7 +237,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/InputTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -244,7 +249,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/DictionaryLookupItem"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -415,7 +421,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/InputTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -426,7 +433,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/TranslatedTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -507,7 +515,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/InputTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -518,7 +527,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/TransliteratedText"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -612,7 +622,8 @@
           "description": "Array of the break sentence elements.",
           "items": {
             "$ref": "#/definitions/BreakSentenceItem"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -693,7 +704,8 @@
           "description": "A list of examples for the (source term, target term) pair.",
           "items": {
             "$ref": "#/definitions/DictionaryExample"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -729,7 +741,8 @@
           "description": "Array of the dictionary examples elements.",
           "items": {
             "$ref": "#/definitions/DictionaryExampleItem"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -753,7 +766,8 @@
           "description": "A list of translations for the source term.",
           "items": {
             "$ref": "#/definitions/DictionaryTranslation"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -771,7 +785,8 @@
           "description": "Array of the dictionary lookup elements.",
           "items": {
             "$ref": "#/definitions/DictionaryLookupItem"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -808,7 +823,8 @@
           "description": "A list of \"back translations\" of the target. For example, source words that the target can translate to.\nThe list is guaranteed to contain the source word that was requested (e.g., if the source word being\nlooked up is \"fly\", then it is guaranteed that \"fly\" will be in the backTranslations list).\nHowever, it is not guaranteed to be in the first position, and often will not be.",
           "items": {
             "$ref": "#/definitions/BackTranslation"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -1045,7 +1061,8 @@
           "description": "List of languages with alterative translations and examples for the query expressed in the source language.",
           "items": {
             "$ref": "#/definitions/TargetDictionaryLanguage"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -1146,7 +1163,8 @@
           "description": "An array of translation results. The size of the array matches the number of target \nlanguages specified through the to query parameter.",
           "items": {
             "$ref": "#/definitions/TranslationText"
-          }
+          },
+          "x-ms-identifiers": []
         },
         "sourceText": {
           "$ref": "#/definitions/SourceText",
@@ -1189,7 +1207,8 @@
           "description": "Array of the translated text elements.",
           "items": {
             "$ref": "#/definitions/TranslatedTextItem"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -1235,7 +1254,8 @@
           "description": "List of scripts available to convert text to.",
           "items": {
             "$ref": "#/definitions/LanguageScript"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -1256,7 +1276,8 @@
           "description": "Array of transliterated texts",
           "items": {
             "$ref": "#/definitions/TransliteratedText"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -1298,7 +1319,8 @@
           "description": "List of scripts to convert from.",
           "items": {
             "$ref": "#/definitions/TransliterableScript"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
