--- a/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/openapi.json
+++ b/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/openapi.json
@@ -139,7 +139,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/TranslateBody"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -150,7 +151,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/TranslatedTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -231,7 +233,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/InputTextItem"
-              }
+              },
+              "x-ms-identifiers": []
             }
           }
         ],
@@ -242,7 +245,8 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/TransliteratedText"
-              }
+              },
+              "x-ms-identifiers": []
             },
             "headers": {
               "X-RequestId": {
@@ -512,7 +516,8 @@
           "description": "List of languages with alterative translations and examples for the query expressed in the source language.",
           "items": {
             "$ref": "#/definitions/TargetDictionaryLanguage"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -633,7 +638,8 @@
           "description": "Translation target parameters.",
           "items": {
             "$ref": "#/definitions/TranslateTarget"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -687,7 +693,8 @@
           "description": "Translation target parameters.",
           "items": {
             "$ref": "#/definitions/TranslateTarget"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -800,7 +807,8 @@
           "maxItems": 5,
           "items": {
             "$ref": "#/definitions/ReferenceSentencePair"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -820,7 +828,8 @@
           "description": "An array of translation results. The size of the array matches the number of target \nlanguages specified through the to query parameter.",
           "items": {
             "$ref": "#/definitions/TranslationText"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -859,7 +868,8 @@
           "description": "Array of the translated text elements.",
           "items": {
             "$ref": "#/definitions/TranslatedTextItem"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -897,7 +907,8 @@
           "description": "List of scripts available to convert text to.",
           "items": {
             "$ref": "#/definitions/LanguageScript"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -918,7 +929,8 @@
           "description": "Array of transliterated texts",
           "items": {
             "$ref": "#/definitions/TransliteratedText"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
@@ -960,7 +972,8 @@
           "description": "List of scripts to convert from.",
           "items": {
             "$ref": "#/definitions/TransliterableScript"
-          }
+          },
+          "x-ms-identifiers": []
         }
       },
       "required": [
