--- a/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/examples/Translate_MaximumSet_Gen.json
+++ b/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/examples/Translate_MaximumSet_Gen.json
@@ -16,7 +16,7 @@
             "script": "Latn",
             "profanityAction": "NoAction",
             "profanityMarker": "Asterisk",
-            "deploymentName": "general",
+            "deploymentName": "gpt-4o-mini",
             "allowFallback": true,
             "grade": "basic",
             "tone": "formal",
@@ -24,8 +24,8 @@
             "adaptiveDatasetId": "21000",
             "referenceTextPairs": [
               {
-                "referenceTextPairsSource": "Please test this out.",
-                "referenceTextPairsTarget": "Vyzkoušejte si to."
+                "source": "Please test this out.",
+                "target": "Vyzkoušejte si to."
               }
             ]
           }
@@ -43,12 +43,12 @@
           },
           "translations": [
             {
-              "to": "cs",
-              "text": "Tohle je test.",
-              "transliteration": {
-                "text": "Tohle je test.",
-                "script": "Latn"
-              }
+              "language": "cs",
+              "instructionTokens":302,
+					    "sourceTokens":5,
+					    "responseTokens":9,
+					    "targetTokens":5,
+					    "text":"Toto je test."
             }
           ]
         }
