--- a/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/examples/Translate_MinimumSet_Gen.json
+++ b/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/examples/Translate_MinimumSet_Gen.json
@@ -18,10 +18,16 @@
     "200": {
       "body": [
         {
+          "detectedLanguage":
+    			{
+    				"language":"en",
+		    		"score":0.12345
+			    },
           "translations": [
             {
-              "text": "Tohle je test.",
-              "to": "cs"
+              "language":"cs",
+              "sourceCharacters": 15,
+              "text": "Tohle je test."
             }
           ]
         }
