--- a/specification/translation/Azure.AI.TextTranslation/tspconfig.yaml
+++ b/specification/translation/Azure.AI.TextTranslation/tspconfig.yaml
@@ -42,8 +42,7 @@ options:
   "@azure-tools/typespec-ts":
     package-dir: "ai-translation-text-rest"
     generate-metadata: false
-    generate-sample: true
-    is-modular-library: true
+    is-modular-library: false
     package-details:
       name: "@azure-rest/ai-translation-text"
       description: "Microsoft Translation Text"
