--- a/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
+++ b/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
@@ -45,8 +45,7 @@ options:
   "@azure-tools/typespec-ts":
     package-dir: "ai-translation-document-rest"
     generate-metadata: true
-    generate-sample: true
-    is-modular-library: true
+    is-modular-library: false
     package-details:
       name: "@azure-rest/ai-translation-document"
       description: "Microsoft Translation Document"
