--- a/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/examples/Translate_MinimumSet_Gen.json
+++ b/specification/translation/data-plane/Azure.AI.TextTranslation/preview/v2025-05-01-preview/examples/Translate_MinimumSet_Gen.json
@@ -18,14 +18,13 @@
     "200": {
       "body": [
         {
-          "detectedLanguage":
-    			{
-    				"language":"en",
-		    		"score":0.12345
-			    },
+          "detectedLanguage": {
+            "language": "en",
+            "score": 0.12345
+          },
           "translations": [
             {
-              "language":"cs",
+              "language": "cs",
               "sourceCharacters": 15,
               "text": "Tohle je test."
             }
