--- a/specification/cognitiveservices/data-plane/Language/preview/2025-05-15-preview/questionanswering-authoring.json
+++ b/specification/cognitiveservices/data-plane/Language/preview/2025-05-15-preview/questionanswering-authoring.json
@@ -1566,7 +1566,7 @@
           }
         },
         "x-ms-examples": {
-          "Create project from file": {
+          "Update sources from files": {
             "$ref": "./examples/questionanswering/authoring/SuccessfulUpdateSourcesFromFile.json"
           }
         },
