--- a/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
+++ b/specification/translation/Azure.AI.DocumentTranslation/tspconfig.yaml
@@ -44,7 +44,7 @@ options:
     flavor: azure
     api-version: "2024-05-01"
   "@azure-tools/typespec-ts":
-    emitter-output-dir: "{output-dir}/{service-dir}/ai-translation-document-rest"
+    emitter-output-dir: "{cwd}/{service-dir}/ai-translation-document-rest"
     generate-metadata: true
     is-modular-library: false
     package-details:
