--- a/specification/translation/data-plane/DocumentTranslation/tspconfig.yaml
+++ b/specification/translation/data-plane/DocumentTranslation/tspconfig.yaml
@@ -12,8 +12,8 @@ options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
     emit-lro-options: "all"
-    emitter-output-dir: "{project-root}/.."
-    output-file: "{azure-resource-provider-folder}/Azure.AI.DocumentTranslation/{version-status}/{version}/openapi.json"
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
