--- a/specification/translation/data-plane/TextTranslation/tspconfig.yaml
+++ b/specification/translation/data-plane/TextTranslation/tspconfig.yaml
@@ -14,8 +14,8 @@ options:
   "@azure-tools/typespec-autorest":
     azure-resource-provider-folder: "data-plane"
     emit-lro-options: "none"
-    emitter-output-dir: "{project-root}/.."
-    output-file: "{azure-resource-provider-folder}/Azure.AI.TextTranslation/stable/v3.0/openapi.json"
+    emitter-output-dir: "{project-root}"
+    output-file: "{version-status}/{version}/openapi.json"
   "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     clear-output-folder: true
