unchange translation tspconfigs

--- a/specification/translation/data-plane/DocumentTranslation/tspconfig.yaml
+++ b/specification/translation/data-plane/DocumentTranslation/tspconfig.yaml
@@ -17,8 +17,7 @@ options:
   "@azure-tools/typespec-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     flavor: azure
-    package-dir: "Azure.AI.Translation.Document"
-    namespace: "{package-dir}"
+    namespace: Azure.AI.Translation.Document
     clear-output-folder: true
     model-namespace: false
     generate-sample-project: false
@@ -30,12 +29,11 @@ options:
     flavor: azure
     package-dir: "azure-ai-translation-document"
     namespace: "azure.ai.translation.document"
-    package-name: "{package-dir}"
     package-mode: dataplane
     package-version: "1.1.0b1"
     generate-sample-project: false
-    generate-test: true
-    generate-sample: true
+    generate-test: false
+    generate-sample: false
   "@azure-tools/typespec-java":
     emitter-output-dir: "{output-dir}/{service-dir}/azure-ai-translation-document"
     namespace: com.azure.ai.translation.document
