--- a/specification/translation/data-plane/TextTranslation/tspconfig.yaml
+++ b/specification/translation/data-plane/TextTranslation/tspconfig.yaml
@@ -20,7 +20,7 @@ options:
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
     clear-output-folder: true
     model-namespace: false
-    namespace: "{package-dir}"
+    namespace: Azure.AI.Translation.Text
     flavor: azure
   "@azure-typespec/http-client-csharp":
     emitter-output-dir: "{output-dir}/{service-dir}/{namespace}"
@@ -29,7 +29,6 @@ options:
   "@azure-tools/typespec-python":
     namespace: "azure.ai.translation.text"
     package-dir: "azure-ai-translation-text"
-    package-name: "{package-dir}"
     flavor: azure
     generate-test: true
     generate-sample: true
