keep v3 and v4 transliteration docs

--- a/specification/translation/data-plane/TextTranslation/preview/2025-05-01-preview/openapi.json
+++ b/specification/translation/data-plane/TextTranslation/preview/2025-05-01-preview/openapi.json
@@ -902,6 +902,10 @@
         "text": {
           "type": "string",
           "description": "A string giving the translated text."
+        },
+        "transliteration": {
+          "$ref": "#/definitions/TransliteratedText",
+          "description": "An object giving the translated text in the script specified by the target's script parameter."
         }
       },
       "required": [
